{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "0a871a89-6c48-44a7-8103-a51a375185a2",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "9accd37c-2d45-4b56-8290-1f0c8b2e6329",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3da45ea7-73e7-4bd5-b137-0b500b9b28f3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e5066c10-b9a1-4bc5-a14f-36c76f76537a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0a24f65a-adee-4f0c-840f-0fe3e2199d09",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "327809b2-5fed-4eaa-906e-71629a50f847",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e0f7d9f5-aab9-42c0-aa6c-63fffcd80b28",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MousePosition",
            "id": "48c98000-1a86-4344-9254-f9f5d678829d",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2b434a69-e7ec-4af0-a688-57cb99d4be0b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c67bbfa2-40ac-40cb-b7e9-240fd20e6f37",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "00d3571d-fa66-44c9-8a93-435b638bb407",
            "actions": [
                {
                    "name": "OpenOrCloseMenu",
                    "type": "Button",
                    "id": "6fab9b44-2a77-4c77-9a6d-8d1b72bc0a69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad6a39d5-9278-4e6c-b4df-0afce6bb48de",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenOrCloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlacementObjectMode",
            "id": "842fe3a8-fc4b-400a-a88d-0f8b030699b2",
            "actions": [
                {
                    "name": "RotatingObject",
                    "type": "Value",
                    "id": "48b6b4a1-ff3d-460c-b48f-c4dfe724ca4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TogglePlacementMode",
                    "type": "Button",
                    "id": "51d20c90-07c0-41f9-b70c-4c7c796af66b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeactivatePlacementMode",
                    "type": "Button",
                    "id": "c7362065-7019-4742-b32e-d20ca73377ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseTypeOfBarrirer",
                    "type": "Button",
                    "id": "d02bab70-de29-47ca-b3e0-4c6a105e2e0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c8eab99-f6bf-4149-9303-d16a49d1a5e7",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatingObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d836407-9729-48ae-a140-f2b824fbc2a9",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePlacementMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "356b466b-886d-43ef-b7ca-f2264588a02a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeactivatePlacementMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32c4f3e1-1d8f-4ec8-8b0f-5c72a156ced3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeactivatePlacementMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "492676c5-d568-4363-b60f-937c4180607d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseTypeOfBarrirer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eed66762-2ee8-4e64-9c4a-06eabe096afa",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseTypeOfBarrirer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75ed777a-224e-4652-b5b9-4e8f8106e625",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseTypeOfBarrirer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9919677-afab-4cd6-8671-d774772c71f2",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseTypeOfBarrirer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerShooting",
            "id": "fff08dc3-6ffe-4331-813c-1baf855c5211",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "24ded51d-b9ab-46b6-94cc-0d61846a7174",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f96e7405-e733-4946-bb35-bd261fd09a01",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}